Add results to example notebook

--- a/examples/example1.ipynb
+++ b/examples/example1.ipynb
@@ -69,10 +69,10 @@
        "  Consumers:\n",
        "    RA\n",
        "Solution:\n",
-       "  X: level=0.9999999999999996, price=1.0\n",
-       "  Y: level=0.9999999999999998, price=1.0000000000000004\n",
-       "  U: level=1.0000000000000002, price=1.0\n",
-       "  RA: level=150.00000000000003\n"
+       "  X: level=1.0000000011233605, price=1.0\n",
+       "  Y: level=1.000000002171063, price=0.9999999995086057\n",
+       "  U: level=1.0000000017082662, price=0.9999999998549345\n",
+       "  RA: level=150.00000021568718\n"
       ]
      },
      "execution_count": 3,
@@ -139,6 +139,39 @@
    ],
    "source": [
     "m._jump_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X:\t1.0000000011233605\n",
+      "PX:\t1.0\n",
+      "LX:\t49.999999910253834\n",
+      "KX:\t49.99999988646134\n",
+      "Y:\t1.000000002171063\n",
+      "PY:\t0.9999999995086057\n",
+      "LY:\t19.999999947163264\n",
+      "KY:\t29.99999995525836\n",
+      "U:\t1.0000000017082662\n",
+      "PU:\t0.9999999998549345\n",
+      "XU:\t99.99999998539701\n",
+      "YU:\t50.000000011937786\n",
+      "PL:\t1.0000000031662621\n",
+      "PK:\t0.9999999999256106\n",
+      "RA:\t150.00000021568718\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in MPSGE.JuMP.all_variables(m._jump_model)\n",
+    "    println(\"$n:\\t$(MPSGE.Complementarity.result_value(n))\")\n",
+    "end"
    ]
   }
  ],
