--- a/examples/example1.ipynb
+++ b/examples/example1.ipynb
@@ -10,6 +10,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Build the simple TWOBYTWO model:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -17,13 +24,10 @@
     {
      "data": {
       "text/plain": [
-       "MPSGE model with 3 sectors and 1 consumers.\n",
-       "  Sectors:\n",
-       "    X\n",
-       "    Y\n",
-       "    U\n",
-       "  Consumers:\n",
-       "    RA\n"
+       "MPSGE model with 3 sectors, 5 commodities and 1 consumers.\n",
+       "  Sectors: X (bm=1.0), Y (bm=1.0), U (bm=1.0)\n",
+       "  Commodities: PX (bm=1.0), PY (bm=1.0), PU (bm=1.0), PL (bm=1.0), PK (bm=1.0)\n",
+       "  Consumers: RA (bm=150.0)\n"
       ]
      },
      "execution_count": 2,
@@ -34,15 +38,30 @@
    "source": [
     "m = Model()\n",
     "\n",
-    "add!(m, Sector(:X, 1, 100, :L, 50, :K, 50))\n",
-    "add!(m, Sector(:Y, 1, 50, :L, 20, :K, 30))\n",
-    "add!(m, Sector(:U, 1, 150, :X, 100, :Y, 50))\n",
+    "add!(m, Sector(:X))\n",
+    "add!(m, Sector(:Y))\n",
+    "add!(m, Sector(:U))\n",
     "\n",
-    "add!(m, Consumer(\n",
-    "    name=:RA,\n",
-    "    demand_name=:U,\n",
-    "    endowments=[Endowment(:L, 70), Endowment(:K, 80)])\n",
-    ")"
+    "add!(m, Commodity(:PX))\n",
+    "add!(m, Commodity(:PY))\n",
+    "add!(m, Commodity(:PU))\n",
+    "add!(m, Commodity(:PL))\n",
+    "add!(m, Commodity(:PK))\n",
+    "\n",
+    "add!(m, Consumer(:RA, benchmark=150.))\n",
+    "\n",
+    "add!(m, Production(:X, 1, :PX, 100, [Input(:PL, 50), Input(:PK, 50)]))\n",
+    "add!(m, Production(:Y, 1, :PY, 50, [Input(:PL, 20), Input(:PK, 30)]))\n",
+    "add!(m, Production(:U, 1, :PU, 150, [Input(:PX, 100), Input(:PY, 50)]))\n",
+    "\n",
+    "add!(m, Demand(:RA, :PU, [Endowment(:PL, 70), Endowment(:PK, 80)]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next try to solve it with an iteration limit of 0 to replicate the benchmark:"
    ]
   },
   {
@@ -61,18 +80,26 @@
     {
      "data": {
       "text/plain": [
-       "MPSGE model with 3 sectors and 1 consumers.\n",
-       "  Sectors:\n",
-       "    X\n",
-       "    Y\n",
-       "    U\n",
-       "  Consumers:\n",
-       "    RA\n",
+       "MPSGE model with 3 sectors, 5 commodities and 1 consumers.\n",
+       "  Sectors: X (bm=1.0), Y (bm=1.0), U (bm=1.0)\n",
+       "  Commodities: PX (bm=1.0), PY (bm=1.0), PU (bm=1.0), PL (bm=1.0), PK (bm=1.0)\n",
+       "  Consumers: RA (bm=150.0)\n",
        "Solution:\n",
-       "  X: level=1.0000000011233605, price=1.0\n",
-       "  Y: level=1.000000002171063, price=0.9999999995086057\n",
-       "  U: level=1.0000000017082662, price=0.9999999998549345\n",
-       "  RA: level=150.00000021568718\n"
+       "  X:\t1.0\n",
+       "  Y:\t1.0\n",
+       "  U:\t1.0\n",
+       "  PX:\t1.0\n",
+       "  PY:\t1.0\n",
+       "  PU:\t1.0\n",
+       "  PL:\t1.0\n",
+       "  PK:\t1.0\n",
+       "  PLPX:\t50.0\n",
+       "  PKPX:\t50.0\n",
+       "  PLPY:\t20.0\n",
+       "  PKPY:\t30.0\n",
+       "  PXPU:\t100.0\n",
+       "  PYPU:\t50.0\n",
+       "  RA:\t150.0\n"
       ]
      },
      "execution_count": 3,
@@ -81,7 +108,14 @@
     }
    ],
    "source": [
-    "solve!(m)"
+    "solve!(m, cumulative_iteration_limit=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Display an algebraic version of the model:"
    ]
   },
   {
@@ -92,44 +126,41 @@
     {
      "data": {
       "text/latex": [
-       "$$ \\begin{alignat*}{1}\\text{feasibility}\\\\\n",
-       "\\text{Subject to} \\quad & X \\geq 0.0\\\\\n",
-       " & PX \\geq 1.0\\\\\n",
-       " & Y \\geq 0.0\\\\\n",
-       " & PY \\geq 0.001\\\\\n",
-       " & U \\geq 0.0\\\\\n",
-       " & PU \\geq 0.001\\\\\n",
-       " & PL \\geq 0.001\\\\\n",
-       " & PK \\geq 0.001\\\\\n",
-       " & PX \\leq 1.0\\\\\n",
-       "\\text{With NL expressions} \\quad & subexpression_{1}: (50.0 * (PL ^ 0.5 * PK ^ 0.5)) / PL - LX\\\\\n",
-       " & subexpression_{2}: (50.0 * (PL ^ 0.5 * PK ^ 0.5)) / PK - KX\\\\\n",
-       " & subexpression_{3}: (20.0 * (PL ^ 0.4 * PK ^ 0.6)) / PL - LY\\\\\n",
-       " & subexpression_{4}: (30.0 * (PL ^ 0.4 * PK ^ 0.6)) / PK - KY\\\\\n",
-       " & subexpression_{5}: (100.0 * (PX ^ 0.6666666666666666 * PY ^ 0.3333333333333333)) / PX - XU\\\\\n",
-       " & subexpression_{6}: (50.0 * (PX ^ 0.6666666666666666 * PY ^ 0.3333333333333333)) / PY - YU\\\\\n",
-       " & subexpression_{7}: (PL * LX + PK * KX) - 100.0 * PX\\\\\n",
-       " & subexpression_{8}: (PL * LY + PK * KY) - 50.0 * PY\\\\\n",
-       " & subexpression_{9}: (PX * XU + PY * YU) - 150.0 * PU\\\\\n",
-       " & subexpression_{10}: (+(XU * U) + 0.0) - 100.0 * X\\\\\n",
-       " & subexpression_{11}: (+(YU * U) + 0.0) - 50.0 * Y\\\\\n",
-       " & subexpression_{12}: (0.0 + +(RA / PU)) - 150.0 * U\\\\\n",
-       " & subexpression_{13}: ((KX * X + KY * Y) + 0.0) - 80.0\\\\\n",
-       " & subexpression_{14}: ((LX * X + LY * Y) + 0.0) - 70.0\\\\\n",
-       " & subexpression_{15}: (70.0 * PL + 80.0 * PK) - RA\\\\\n",
-       "\\end{alignat*}\n",
-       " $$"
+       "\\begin{alignat*}{3}\\\n",
+       "& (50.0 * (PL ^ {0.5} * PK ^ {0.5})) / PL - PLPX\n",
+       "\\quad && ┴ \\quad && PLPX\\\\& (50.0 * (PL ^ {0.5} * PK ^ {0.5})) / PK - PKPX\n",
+       "\\quad && ┴ \\quad && PKPX\\\\& (20.0 * (PL ^ {0.4} * PK ^ {0.6})) / PL - PLPY\n",
+       "\\quad && ┴ \\quad && PLPY\\\\& (30.0 * (PL ^ {0.4} * PK ^ {0.6})) / PK - PKPY\n",
+       "\\quad && ┴ \\quad && PKPY\\\\& (100.0 * (PX ^ {0.6666666666666666} * PY ^ {0.3333333333333333})) / PX - PXPU\n",
+       "\\quad && ┴ \\quad && PXPU\\\\& (50.0 * (PX ^ {0.6666666666666666} * PY ^ {0.3333333333333333})) / PY - PYPU\n",
+       "\\quad && ┴ \\quad && PYPU\\\\& (PL * PLPX + PK * PKPX) - 100.0 * PX\n",
+       "\\quad && ┴ \\quad && 0.0 <X\\\\& (PL * PLPY + PK * PKPY) - 50.0 * PY\n",
+       "\\quad && ┴ \\quad && 0.0 <Y\\\\& (PX * PXPU + PY * PYPU) - 150.0 * PU\n",
+       "\\quad && ┴ \\quad && 0.0 <U\\\\& (+(PXPU * U) + 0.0) - 100.0 * X\n",
+       "\\quad && ┴ \\quad && 0.001 <PX\\\\& (+(PYPU * U) + 0.0) - 50.0 * Y\n",
+       "\\quad && ┴ \\quad && 0.001 <PY\\\\& (0.0 + +(RA / PU)) - 150.0 * U\n",
+       "\\quad && ┴ \\quad && 0.001 <PU\\\\& ((PLPX * X + PLPY * Y) + 0.0) - 70.0\n",
+       "\\quad && ┴ \\quad && 0.001 <PL\\\\& ((PKPX * X + PKPY * Y) + 0.0) - 80.0\n",
+       "\\quad && ┴ \\quad && 0.001 <PK\\\\& (70.0 * PL + 80.0 * PK) - RA\n",
+       "\\quad && ┴ \\quad && RA\\\\\\end{alignat*}\n"
       ],
       "text/plain": [
-       "A JuMP Model\n",
-       "Feasibility problem with:\n",
-       "Variables: 15\n",
-       "`JuMP.VariableRef`-in-`MathOptInterface.GreaterThan{Float64}`: 8 constraints\n",
-       "`JuMP.VariableRef`-in-`MathOptInterface.LessThan{Float64}`: 1 constraint\n",
-       "Model mode: AUTOMATIC\n",
-       "CachingOptimizer state: NO_OPTIMIZER\n",
-       "Solver name: No optimizer attached.\n",
-       "Names registered in the model: KX, KY, LX, LY, PK, PL, PU, PX, PY, RA, U, X, XU, Y, YU"
+       "Mixed complementarity problem with 15 constraints:\n",
+       "  (50.0 * (PL ^ 0.5 * PK ^ 0.5)) / PL - PLPX                                 ┴  PLPX\n",
+       "  (50.0 * (PL ^ 0.5 * PK ^ 0.5)) / PK - PKPX                                 ┴  PKPX\n",
+       "  (20.0 * (PL ^ 0.4 * PK ^ 0.6)) / PL - PLPY                                 ┴  PLPY\n",
+       "  (30.0 * (PL ^ 0.4 * PK ^ 0.6)) / PK - PKPY                                 ┴  PKPY\n",
+       "  (100.0 * (PX ^ 0.6666666666666666 * PY ^ 0.3333333333333333)) / PX - PXPU  ┴  PXPU\n",
+       "  (50.0 * (PX ^ 0.6666666666666666 * PY ^ 0.3333333333333333)) / PY - PYPU   ┴  PYPU\n",
+       "  (PL * PLPX + PK * PKPX) - 100.0 * PX                                       ┴  0.0 < X\n",
+       "  (PL * PLPY + PK * PKPY) - 50.0 * PY                                        ┴  0.0 < Y\n",
+       "  (PX * PXPU + PY * PYPU) - 150.0 * PU                                       ┴  0.0 < U\n",
+       "  (+(PXPU * U) + 0.0) - 100.0 * X                                            ┴  0.001 < PX\n",
+       "  (+(PYPU * U) + 0.0) - 50.0 * Y                                             ┴  0.001 < PY\n",
+       "  (0.0 + +(RA / PU)) - 150.0 * U                                             ┴  0.001 < PU\n",
+       "  ((PLPX * X + PLPY * Y) + 0.0) - 70.0                                       ┴  0.001 < PL\n",
+       "  ((PKPX * X + PKPY * Y) + 0.0) - 80.0                                       ┴  0.001 < PK\n",
+       "  (70.0 * PL + 80.0 * PK) - RA                                               ┴  RA\n"
       ]
      },
      "execution_count": 4,
@@ -138,40 +169,7 @@
     }
    ],
    "source": [
-    "m._jump_model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X:\t1.0000000011233605\n",
-      "PX:\t1.0\n",
-      "LX:\t49.999999910253834\n",
-      "KX:\t49.99999988646134\n",
-      "Y:\t1.000000002171063\n",
-      "PY:\t0.9999999995086057\n",
-      "LY:\t19.999999947163264\n",
-      "KY:\t29.99999995525836\n",
-      "U:\t1.0000000017082662\n",
-      "PU:\t0.9999999998549345\n",
-      "XU:\t99.99999998539701\n",
-      "YU:\t50.000000011937786\n",
-      "PL:\t1.0000000031662621\n",
-      "PK:\t0.9999999999256106\n",
-      "RA:\t150.00000021568718\n"
-     ]
-    }
-   ],
-   "source": [
-    "for n in MPSGE.JuMP.all_variables(m._jump_model)\n",
-    "    println(\"$n:\\t$(MPSGE.Complementarity.result_value(n))\")\n",
-    "end"
+    "jm = algebraic_version(m)"
    ]
   }
  ],
