--- a/examples/example2.ipynb
+++ b/examples/example2.ipynb
@@ -9,9 +9,9 @@
       "execution_count": 1,
       "metadata": {
         "execution": {
-          "iopub.status.busy": "2021-02-27T05:46:40.777Z",
-          "iopub.execute_input": "2021-02-27T05:46:42.210Z",
-          "iopub.status.idle": "2021-02-27T05:47:00.158Z"
+          "iopub.status.busy": "2021-02-27T05:51:59.739Z",
+          "iopub.execute_input": "2021-02-27T05:52:00.702Z",
+          "iopub.status.idle": "2021-02-27T05:52:12.817Z"
         }
       }
     },
@@ -58,9 +58,9 @@
       "execution_count": 2,
       "metadata": {
         "execution": {
-          "iopub.status.busy": "2021-02-27T05:47:00.170Z",
-          "iopub.execute_input": "2021-02-27T05:47:00.696Z",
-          "iopub.status.idle": "2021-02-27T05:47:02.488Z"
+          "iopub.status.busy": "2021-02-27T05:52:12.833Z",
+          "iopub.execute_input": "2021-02-27T05:52:13.282Z",
+          "iopub.status.idle": "2021-02-27T05:52:15.039Z"
         }
       }
     },
@@ -97,9 +97,9 @@
       "execution_count": 3,
       "metadata": {
         "execution": {
-          "iopub.status.busy": "2021-02-27T05:47:02.503Z",
-          "iopub.execute_input": "2021-02-27T05:47:02.514Z",
-          "iopub.status.idle": "2021-02-27T05:47:29.797Z"
+          "iopub.status.busy": "2021-02-27T05:52:15.049Z",
+          "iopub.execute_input": "2021-02-27T05:52:15.056Z",
+          "iopub.status.idle": "2021-02-27T05:52:30.829Z"
         }
       }
     },
@@ -121,7 +121,7 @@
           "execution_count": 4,
           "data": {
             "text/plain": "Mixed complementarity problem with 15 constraints:\n  (50.0 * (PL ^ 0.5 * PK ^ 0.5)) / PL - PLPX                                 ┴  PLPX\n  (50.0 * (PL ^ 0.5 * PK ^ 0.5)) / PK - PKPX                                 ┴  PKPX\n  (20.0 * (PL ^ 0.4 * PK ^ 0.6)) / PL - PLPY                                 ┴  PLPY\n  (30.0 * (PL ^ 0.4 * PK ^ 0.6)) / PK - PKPY                                 ┴  PKPY\n  (100.0 * (PX ^ 0.6666666666666666 * PY ^ 0.3333333333333333)) / PX - PXPU  ┴  PXPU\n  (50.0 * (PX ^ 0.6666666666666666 * PY ^ 0.3333333333333333)) / PY - PYPU   ┴  PYPU\n  (PL * PLPX + PK * PKPX) - 100.0 * PX                                       ┴  0.0 < X\n  (PL * PLPY + PK * PKPY) - 50.0 * PY                                        ┴  0.0 < Y\n  (PX * PXPU + PY * PYPU) - 150.0 * PU                                       ┴  0.0 < U\n  (+(PXPU * U) + 0.0) - 100.0 * X                                            ┴  0.001 < PX\n  (+(PYPU * U) + 0.0) - 50.0 * Y                                             ┴  0.001 < PY\n  (0.0 + +(RA / PU)) - 150.0 * U                                             ┴  0.001 < PU\n  ((PLPX * X + PLPY * Y) + 0.0) - 70.0                                       ┴  0.001 < PL\n  ((PKPX * X + PKPY * Y) + 0.0) - 80.0                                       ┴  0.001 < PK\n  (70.0 * PL + 80.0 * PK) - RA                                               ┴  RA\n",
-            "text/latex": "$$ \\begin{alignat*}{3}\\\n& (50.0 * (PL ^ {0.5} * PK ^ {0.5})) / PL - PLPX\n\\quad && ┴ \\quad && PLPX\\\\& (50.0 * (PL ^ {0.5} * PK ^ {0.5})) / PK - PKPX\n\\quad && ┴ \\quad && PKPX\\\\& (20.0 * (PL ^ {0.4} * PK ^ {0.6})) / PL - PLPY\n\\quad && ┴ \\quad && PLPY\\\\& (30.0 * (PL ^ {0.4} * PK ^ {0.6})) / PK - PKPY\n\\quad && ┴ \\quad && PKPY\\\\& (100.0 * (PX ^ {0.6666666666666666} * PY ^ {0.3333333333333333})) / PX - PXPU\n\\quad && ┴ \\quad && PXPU\\\\& (50.0 * (PX ^ {0.6666666666666666} * PY ^ {0.3333333333333333})) / PY - PYPU\n\\quad && ┴ \\quad && PYPU\\\\& (PL * PLPX + PK * PKPX) - 100.0 * PX\n\\quad && ┴ \\quad && 0.0 <X\\\\& (PL * PLPY + PK * PKPY) - 50.0 * PY\n\\quad && ┴ \\quad && 0.0 <Y\\\\& (PX * PXPU + PY * PYPU) - 150.0 * PU\n\\quad && ┴ \\quad && 0.0 <U\\\\& (+(PXPU * U) + 0.0) - 100.0 * X\n\\quad && ┴ \\quad && 0.001 <PX\\\\& (+(PYPU * U) + 0.0) - 50.0 * Y\n\\quad && ┴ \\quad && 0.001 <PY\\\\& (0.0 + +(RA / PU)) - 150.0 * U\n\\quad && ┴ \\quad && 0.001 <PU\\\\& ((PLPX * X + PLPY * Y) + 0.0) - 70.0\n\\quad && ┴ \\quad && 0.001 <PL\\\\& ((PKPX * X + PKPY * Y) + 0.0) - 80.0\n\\quad && ┴ \\quad && 0.001 <PK\\\\& (70.0 * PL + 80.0 * PK) - RA\n\\quad && ┴ \\quad && RA\\\\\\end{alignat*}\n $$\n"
+            "text/latex": "$$ \\begin{alignat*}{3}\\\n& (50.0 * (PL ^ {0.5} * PK ^ {0.5})) / PL - PLPX\n\\quad && \\perp \\quad && PLPX\\\\& (50.0 * (PL ^ {0.5} * PK ^ {0.5})) / PK - PKPX\n\\quad && \\perp \\quad && PKPX\\\\& (20.0 * (PL ^ {0.4} * PK ^ {0.6})) / PL - PLPY\n\\quad && \\perp \\quad && PLPY\\\\& (30.0 * (PL ^ {0.4} * PK ^ {0.6})) / PK - PKPY\n\\quad && \\perp \\quad && PKPY\\\\& (100.0 * (PX ^ {0.6666666666666666} * PY ^ {0.3333333333333333})) / PX - PXPU\n\\quad && \\perp \\quad && PXPU\\\\& (50.0 * (PX ^ {0.6666666666666666} * PY ^ {0.3333333333333333})) / PY - PYPU\n\\quad && \\perp \\quad && PYPU\\\\& (PL * PLPX + PK * PKPX) - 100.0 * PX\n\\quad && \\perp \\quad && 0.0 <X\\\\& (PL * PLPY + PK * PKPY) - 50.0 * PY\n\\quad && \\perp \\quad && 0.0 <Y\\\\& (PX * PXPU + PY * PYPU) - 150.0 * PU\n\\quad && \\perp \\quad && 0.0 <U\\\\& (+(PXPU * U) + 0.0) - 100.0 * X\n\\quad && \\perp \\quad && 0.001 <PX\\\\& (+(PYPU * U) + 0.0) - 50.0 * Y\n\\quad && \\perp \\quad && 0.001 <PY\\\\& (0.0 + +(RA / PU)) - 150.0 * U\n\\quad && \\perp \\quad && 0.001 <PU\\\\& ((PLPX * X + PLPY * Y) + 0.0) - 70.0\n\\quad && \\perp \\quad && 0.001 <PL\\\\& ((PKPX * X + PKPY * Y) + 0.0) - 80.0\n\\quad && \\perp \\quad && 0.001 <PK\\\\& (70.0 * PL + 80.0 * PK) - RA\n\\quad && \\perp \\quad && RA\\\\\\end{alignat*}\n $$\n"
           },
           "metadata": {}
         }
@@ -129,9 +129,9 @@
       "execution_count": 4,
       "metadata": {
         "execution": {
-          "iopub.status.busy": "2021-02-27T05:47:29.815Z",
-          "iopub.execute_input": "2021-02-27T05:47:29.825Z",
-          "iopub.status.idle": "2021-02-27T05:47:31.387Z"
+          "iopub.status.busy": "2021-02-27T05:52:30.845Z",
+          "iopub.execute_input": "2021-02-27T05:52:30.852Z",
+          "iopub.status.idle": "2021-02-27T05:52:32.437Z"
         }
       }
     }
